beecp changes

Changes in 5.1.2
1: Add pool name to method execution logs
2: Change log id type of method execution to String


Changes in 5.1.1
1: Exception replacement in BeeDataSourceConfig(IllegalArgumentException ---> BeeDataSourceConfigException)
2: Add two Exceptions for default value set/get on initial test connection(ConnectionDefaultValueGetException,ConnectionDefaultValueSetException)
3: Rename some configuration items


Changes in 5.1.0
1: rename some configuration items
2: delete three update methods(updateUsername,updatePassword,updateJdbcUrl) from data source
3: add method execution logs feature

Changes in 5.0.0
1: sync source code from stone project


Changes in 4.2.0
1: Improve spin for getting connection
2: Support key prefix in properties file and properties object

Changes in 4.1.9
1: Replace some time read methods in pool(System.currentTimeMillis()-->  System.nanoTime())
2: Provide connection alive validator interface for customization

Changes in 4.1.8
1: add interruption double check on borrower thread
2: throw exceptions when check fail in configuration set methods
3: change message of check exceptions

Changes in 4.1.7
1: remove two monitoring methods[getConnectionCreatingCount(),getConnectionCreatingTimeoutCount()]
2: change name of a configuration item[forceCloseUsingOnClear --> forceRecycleBorrowedOnClose]
3: change a method name of MonitorVo[getUsingSize() --> getBorrowedSize()]

Changes in 4.1.6
1: remove final keyword from datasource
2: support array properties injection in util

Changes in 4.1.5
1: fix null point exception when idle timeout scan

Changes in 4.1.4
1: fix some code inspection issues scanned by IDEA
2: restore self-spin source code with history code
3: rename a configuration item(delayTimeForNextClear --> parkTimeForRetry)
4: use try-with-resources on configuration file load
5: remove some unnecessary exception catch
6: improve structure of source code

Changes in 4.1.3
1: simplify source code