@@ -21,6 +21,8 @@ public interface BeeConnectionPoolMonitorVo {
 
     String getPoolMode();
 
+    int getPoolState();
+
     boolean isClosed();
 
     boolean isReady();
